# SSEngine-Editor

./: .gitmodules  CMakeLists.txt  Readme.md
Editor/: CMakeLists.txt
Editor/src/: MainWindow.cpp  MainWindow.h  QtWindow.cpp  QtWindow.h  TestWindow.cpp  TestWindow.h  main.cpp  mainwindow.ui  ui_mainwindow.h
